--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                         projects I've worked on, as well as my future projects. Beyond web development, I 
                         love to read, be with friends, and travel the world. I just recently got back from a 3-week
                         solo trip abroad in Europe, something that I would suggest every woman to experience at least
-                        once in her life. Please feel free to contact me if you would like to connect further. I look
+                        once in their life. The picture to the left is from the top of Arthur's Seat, a famous mountain 
+                        that sits within Edinburgh, Scotland. Please feel free to contact me if you would like to connect further. I look
                         forward to hearing from you!</p>
                     <img class="main-img" src="./images/arthurs-seat.jpg" alt="Arthur's Seat Viewpoint in Edinburgh Scotland."/>
             </section>
