--- a/index.html
+++ b/index.html
@@ -51,24 +51,24 @@
                  <div class="portfolio">  
                     <figure class="project-one">
                         <h3>
-                            <a href="https://github.com/nrose19/challenge-one" class="project-buttons">Project One</a>
+                            <a href="https://github.com/hayni100/Movie-Recs" class="project-buttons">Project: What to Watch - Movie Recommender</a>
                         </h3>
                     </figure>
                     <div class="bottom-projects">
                         <figure class="project-two">
                             <h3>
-                                <a href="https://github.com/nrose19/prework-study-guide" class="project-buttons">Project Two</a>
+                                <a href="https://github.com/nrose19/workday-planner-challenge" class="project-buttons">Project: Weekday Planner</a>
                             </h3>
                         </figure>
                         <figure class="project-three">
                             <h3>
-                                <a href="https://github.com/nrose19" class="project-buttons">Project Three</a>
+                                <a href="https://github.com/nrose19/coding-quiz-challenge" class="project-buttons">Project: Coding Quiz</a>
                             </h3>
                     
                         </figure>
                         <figure class="project-four">
                              <h3>
-                                <a href="https://github.com/nrose19" class="project-buttons">Project Four</a>
+                                <a href="https://github.com/nrose19/challenge-one" class="project-buttons">Project: Semantic HTML</a>
                             </h3>
                 
                         </figure>
