addition of Project 2 - burnout buddy

--- a/index.html
+++ b/index.html
@@ -51,26 +51,25 @@
                  <div class="portfolio">  
                     <figure class="project-one">
                         <h3>
-                            <a href="https://github.com/hayni100/Movie-Recs" class="project-buttons">Project: What to Watch - Movie Recommender</a>
+                            <a href="https://github.com/gjferrari/burnout-buddy" class="project-buttons">Project: B.O.B - BurnOut Buddy</a>
                         </h3>
                     </figure>
                     <div class="bottom-projects">
                         <figure class="project-two">
                             <h3>
+                                <a href="https://github.com/hayni100/Movie-Recs" class="project-buttons">Project: What to Watch - Movie Recommender</a>
+                            </h3>
+                       </figure>
+                        <figure class="project-three">
+                            <h3>
                                 <a href="https://github.com/nrose19/workday-planner-challenge" class="project-buttons">Project: Weekday Planner</a>
                             </h3>
                         </figure>
-                        <figure class="project-three">
+                        <figure class="project-four">
                             <h3>
                                 <a href="https://github.com/nrose19/coding-quiz-challenge" class="project-buttons">Project: Coding Quiz</a>
                             </h3>
                     
-                        </figure>
-                        <figure class="project-four">
-                             <h3>
-                                <a href="https://github.com/nrose19/challenge-one" class="project-buttons">Project: Semantic HTML</a>
-                            </h3>
-                
                         </figure>
                     </div>
                 </div>     
